--- a/css/style.css
+++ b/css/style.css
@@ -617,6 +617,11 @@ h3 {
             font-size: 2.2em;
             color: #fff;
         }
+#banner 
+.content h2 {
+    font-size: 3em;
+    color: #fff;
+}
     }
 
 /*-- @media Query Section --*/
